# booth

./: .gitignore  README.md  package-lock.json  package.json
circuits/: vote.circom
contracts/: Cargo.toml
contracts/booth/: Cargo.toml  test_fixtures.json
contracts/booth/src/: lib.rs  test.rs
contracts/booth/test_snapshots/test/: honest_vote_verifies_and_tallies.1.json  non_canonical_nullifier_is_rejected.1.json  print_vote_cost.1.json  revote_with_same_nullifier_is_rejected.1.json  second_voter_counts_separately.1.json  tampered_proof_is_rejected.1.json  vote_after_poll_end_is_rejected.1.json
docs/: design.md  video-script.md
scripts/: gen-demo.mjs  make-fixtures.mjs  prove-test.mjs  setup-circuit.sh
scripts/lib/: encode.mjs  merkle.mjs
submission/: BUIDL.md  SUBMIT-CHECKLIST.md  youtube-upload.md
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web-seed/: demo-passes.json
web/public/zk/: vote.wasm
web/scripts/: smoke.mjs
web/src/: App.tsx  main.tsx
web/src/components/create/: CreateWizard.tsx  PassHandout.tsx  ReviewLaunch.tsx  create.css
web/src/components/home/: Home.tsx  home.css
web/src/components/layout/: Footer.tsx  Header.tsx  layout.css
web/src/components/poll/: FreshDemoButton.tsx  PollCard.tsx  PollPage.tsx  TallyBoard.tsx  poll.css
web/src/hooks/: useHashRoute.ts  usePolls.ts  useVoteFlow.ts
web/src/lib/: chain.ts  config.ts  encode.ts  errors.ts  format.ts  merkle.ts  passes.ts  polyfill.ts  stellar.ts  zk.ts
web/src/styles/: global.css  tokens.css
(+8 files in other folders)
